--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -11,24 +11,20 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-
+      
       - uses: Platane/snk@v3
         id: snake-gif
         with:
-          github_user_name: RezdarNajeeb
+          github_user_name: RezdarNajeeb # your GitHub username
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Move Snake Animation to docs folder
-        run: mv dist/github-contribution-grid-snake-dark.svg docs/github-contribution-grid-snake-dark.svg
-
-      - name: Deploy to GitHub Pages
-        uses: crazy-max/ghaction-github-pages@v3.1.0
+          
+      - uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
-          target_branch: main
-          build_dir: docs
+          target_branch: output
+          build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
